<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="20sp"
        android:background="@drawable/maintext"
        android:textAlignment="textEnd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/calc_AC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_AC"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"
            style="@style/buttonStyle"/>
        <Button
            android:id="@+id/calc_plusMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_plusminus"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_percentage"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_division"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/calc_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="7"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="8"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="9"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_multiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="x"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/calc_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="4"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="5"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="6"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_minus"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/calc_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="2"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="3"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_plus"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/calc_zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_weight="2"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_slash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_slash"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
        <Button
            android:id="@+id/calc_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calc_equals"
            android:layout_weight="1"
            android:layout_margin="@dimen/calc_buttonsMargin"/>
    </LinearLayout>



</LinearLayout>